--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "@types/react-dom": "^18.3.0",
         "@types/react-transition-group": "^4.4.10",
         "@typescript-eslint/eslint-plugin": "^6.13.1",
+        "autoprefixer": "^10.4.20",
         "eslint": "8.57.0",
         "eslint-config-next": "14.2.5",
         "eslint-config-prettier": "^9.1.0",
@@ -74,11 +75,13 @@
         "gulp-uglifycss": "^1.1.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "postcss": "^8.4.40",
         "prettier": "3.3.2",
         "rollup": "^2.79.1",
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-terser": "^7.0.2",
         "sass": "^1.77.5",
+        "tailwindcss": "^3.4.7",
         "typedoc": "0.24.8",
         "typescript": "5.1.6"
     },
